--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 # testing
 /coverage
-
+.eslintcache
 # production
 /build
 
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
