--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
+		"form-data": "^4.0.0",
 		"moment": "^2.29.1",
 		"react": "^17.0.1",
 		"react-calendar": "^3.3.1",
+		"react-confirm-alert": "^2.7.0",
 		"react-dom": "^17.0.1",
+		"react-loader-spinner": "^4.0.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"validator": "^13.5.2",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
