--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-loader-spinner": "^4.0.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"swiper": "^6.5.0",
 		"validator": "^13.5.2",
 		"web-vitals": "^0.2.4"
 	},
