--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-confirm-alert": "^2.7.0",
 		"react-dom": "^17.0.1",
 		"react-loader-spinner": "^4.0.0",
+		"react-qr-reader": "^2.2.1",
 		"react-qrcode-logo": "^2.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
