--- a/phochana/package.json
+++ b/phochana/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "^17.0.1",
 		"react-loader-spinner": "^4.0.0",
 		"react-measure": "^2.5.2",
+		"react-moment": "^1.1.1",
 		"react-qr-reader": "^2.2.1",
 		"react-qrcode-logo": "^2.2.1",
 		"react-router-dom": "^5.2.0",
