--- a/phochana/package.json
+++ b/phochana/package.json
@@ -18,6 +18,7 @@
 		"react-calendar": "^3.3.1",
 		"react-confirm-alert": "^2.7.0",
 		"react-dom": "^17.0.1",
+		"react-google-charts": "^3.0.15",
 		"react-loader-spinner": "^4.0.0",
 		"react-measure": "^2.5.2",
 		"react-moment": "^1.1.1",
