--- a/phochana/package.json
+++ b/phochana/package.json
@@ -6,16 +6,19 @@
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/pickers": "^3.3.10",
+		"@reach/combobox": "^0.15.1",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
+		"compressorjs": "^1.0.7",
 		"date-fns": "^2.21.1",
 		"form-data": "^4.0.0",
 		"moment": "^2.29.1",
 		"node-sass": "^4.14.1",
 		"react": "^17.0.1",
 		"react-calendar": "^3.3.1",
+		"react-component-export-image": "^1.0.6",
 		"react-confirm-alert": "^2.7.0",
 		"react-dom": "^17.0.1",
 		"react-google-charts": "^3.0.15",
@@ -26,6 +29,7 @@
 		"react-qrcode-logo": "^2.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"react-share": "^4.4.0",
 		"styled-components": "^5.2.3",
 		"sweetalert2-react": "^0.8.3",
 		"swiper": "^6.5.0",
